TheKabal (24 August 2014)
--------------------------------------
Create a Players Domain Entity, and split out a PlayersGateway to hold SQL calls related to Players, and finally add a selectPlayersLoggedIn method.

TheKabal (15 July 2014)
--------------------------------------
Anywhere you are unconditionally including a class file, use require_once(). Anywhere you are conditionally
including a class file, use include_once().

TheKabal (12 July 2014)
--------------------------------------
Switch to pdo for all SQL calls via Login::checkLogin
Fix '' and "" calls to actually use null
For _SERVER, _GET and _POST, isset will not correctly detect null, while array_key_exists will - standardizing on this choice

TheKabal (6 July 2014)
--------------------------------------
Death to $_REQUEST calls begins (part one and two, more to follow)
Redoing checkLogin class to split the individual checks into other classes
Changed "server_closed" to "game_closed", in preparation for future with multiple games per server

TheKabal (2 July 2014)
--------------------------------------
Assorted DB session fixes, including schema sizes
Add explicit accept-charset to forms to allow utf-8 submissions

TheKabal (29 June 2014)
--------------------------------------
Add new "Character" class & object - in prep for player authentication
Added session regeneration method - $bnt_session->regen that plays nicely with our db-driven sessions
Sessions now correctly expire after create_time + maxlifetime (currently at 30 mins)

TheKabal (24 June 2014)
--------------------------------------
Database driven sessions return - now PDO powered. More functionality to come, but it is entirely functional now.

TheKabal (23 June 2014)
--------------------------------------
Add DB-driven session class - not yet hooked up, still work to be done.

TheKabal (21 June 2014)
--------------------------------------
Split presets out into its own table, increase default max preset count to five
